# AzureAppSecretRenewal

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_DETAILED.md  DETAILED_EXPLANATION_AND_DEPLOYMENT.md  README.md  agents.md  pyproject.toml  requirements.txt
credential_renewal/: __init__.py  archive.py  auth.py  azure_identity.py  bitwarden.py  case_ids.py  cherwell_client.py  cherwell_status_scan.py  config.py  cosmos_store.py  expiry.py  graph_client.py  internal_api.py  mailer.py  models.py  reporting_export.py  runbook_scan.py  tokens.py  web_app.py  workflow.py
grafana/: app-registration-overview-dashboard.json  credential-renewal-archive-dashboard.json  credential-renewal-cases-dashboard.json
scripts/: build_deployment_artifacts.sh
terraform/: README.md
terraform/bootstrap/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/envs/dev/: backend.hcl.example  env_variables.tf  main.tf  outputs.tf  terraform.tfvars.example
terraform/envs/prod/: backend.hcl.example  env_variables.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/credential-renewal/: README.md  locals.tf  main.tf  outputs.tf  rbac.tf  variables.tf  versions.tf
terraform/runbooks/: cherwell_status.py  reporting_export.py  scan.py
tests/: test_cherwell_reporting.py  test_expiry.py  test_overview_archive_reporting.py  test_tokens.py  test_workflow.py
