[project]
name = "azure-app-credential-renewal"
version = "0.1.0"
description = "Azure Automation and Web App workflow for expiring Entra ID App Registration credentials."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "azure-cosmos>=4.7.0",
  "azure-identity>=1.17.0",
  "azure-keyvault-secrets>=4.8.0",
  "fastapi>=0.111.0",
  "python-multipart>=0.0.9",
  "requests>=2.32.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
